<resources>
    <string name="app_name">Master Roam</string>
    <string name="tab_home">Home</string>
    <string name="tab_mall">Store</string>
    <string name="tab_setting">Settings</string>
    <string name="title_activity_home">@string/app_name</string>
    <string name="select_wifi">Select Network</string>
    <string name="about">TGT limited\nCopyright ©2014-2017</string>
    <string name="tip_welcome">Welcome to Master Roam</string>
    <string name="btn_scan">Scan QR Code to Add Device</string>
    <string name="btn_mannual">Add Device Manually</string>
    <string name="tip_connect_unbind">Connect/Unbind</string>
    <string name="tip_device_operation_title">Device Operating Settings</string>
    <string name="tip_title">Notification</string>
    <string name="tip_input_password">Please Enter Password</string>
    <string name="tip_purchase_flow_package">Purchase Data Package</string>
    <string name="tip_input_old_password">Old Password：</string>
    <string name="tip_input_new_password">New Password：</string>
    <string name="tip_input_old_password_hint">Enter Old Password</string>
    <string name="tip_input_new_password_hint">Enter New Password</string>
    <string name="tip_close_device_hotspot">Would you like to turn off the hotspot？</string>
    <string name="tip_apn">APN</string>
    <string name="tip_apn_name">Name</string>
    <string name="tip_apn_mcc">MCC</string>
    <string name="tip_apn_mnc">MNC</string>
    <string name="tip_apn_type">Type</string>
    <string name="tip_apn_user">Username</string>
    <string name="tip_apn_password">Password</string>
    <string name="tip_apn_port">Port</string>
    <string name="tip_apn_proxy">Proxy</string>
    <string name="tip_apn_mmsc">MMSC</string>
    <string name="tip_not_connected">Cannot connect to device.</string>
    <string name="tip_not_connecting">No connection</string>
    <string name="tip_for_open_scan_connected">Cannot connect to the device. Please scan the device QR code instead.</string>
    <string name="tip_for_new_scan_connected">Please scan the device QR code to connect.</string>
    <string name="tip_for_new_scan_connected2">To add another device, please scan QR code of the device.</string>
    <string name="tip_scan">Place the QR code in the frame to scan.</string>
    <string name="tip_password_empty">Password cannot be empty.</string>
    <string name="tip_password_at_least_8">At least eight digits for the password</string>
    <string name="tip_input">Enter</string>
    <string name="tip_input_corret_device_num">Please input the correct device number.</string>
    <string name="tip_password">Password</string>
    <string name="tip_operation_success">Successful</string>
    <string name="tip_operation_failed">Failed</string>
    <string name="tip_match_bluetooth">Wait to match the bluetooth first, then connect to the device</string>
    <string name="tip_can_not_internet">Internet is not available. Please make sure that your cellphone is connected to the Internet.</string>
    <string name="tip_bluetooth_open">Cellphone bluetooth is on.</string>
    <string name="tip_enter">Enter APP</string>
    <string name="tip_apn_plmn">PLMN</string>
    <string name="cannot_find_device">Can not find device, please connect the network of the device. (If not found, please open the wifi)</string>
    <string name="tip_input_device_num">Please input the device code.</string>
    <string name="tip_scaning">Scanning...</string>
    <string name="tip_disconnected">Disconnected</string>
    <string name="tip_get_ip_address">Receiving IP...</string>
    <string name="tip_authenticating">Authenticating...</string>
    <string name="tip_connected_to">Connected</string>
    <string name="tip_connecting">Connecting device...</string>
    <string name="tip_connect">Connecting</string>
    <string name="tip_connect2">Connect</string>
    <string name="tip_in_using">In Use</string>
    <string name="tip_payment">Payment</string>
    <string name="tip_device_sn">Device Number:</string>
    <string name="tip_can_not_find_device_mac_address">Cannot receive device bluetooth address.</string>
    <string name="tip_unistall_wetchat">Wechat is not installed.</string>
    <string name="tip_current_version_info">Version:</string>
    <string name="tip_newest_version_check">Checking for Update...</string>
    <string name="tip_no_new_version">Software is up to date.</string>
    <string name="tip_download_error">Download Failed!</string>
    <string name="tip_download_apk">Downloading...</string>
    <string name="tip_select_file">Please Select File</string>
    <string name="tip_can_not_find_file">Cannot find file to upgrade.</string>
    <string name="tip_can_not_get_device_info">Cannot receive device info.</string>
    <string name="tip_pay_success">Payment Succeeded</string>
    <string name="tip_pay_failed">Payment Failed</string>
    <string name="tip_active_header">Activate Device</string>
    <string name="tip_active_not">No Activation</string>
    <string name="tip_active_now">Confirm Activation</string>
    <string name="tip_start_now">Start</string>
    <string name="tip_active_success">Activate successfully!</string>
    <string name="tip_active_success_info">You have received free data package. Please click “Main Page” for details</string>
    <string name="tip_for_active_device">The device is not activated. Would you like to activate the device now?</string>
    <string name="tip_for_active_device_error">Cannot Activate Device</string>
    <string name="tip_can_not_find_the_device">Cannot detect device info. Please try again.</string>
    <string name="tip_translator_package_introduce">"The translation data refers to the data that supports the language translation services provided by this device in the active area. "</string>
    <string name="tip_wxpay_success">Payment Succeeded</string>
    <string name="tip_wxpay_cancel">Payment Cancelled</string>
    <string name="tip_wxpay_denied">Payment Denied</string>
    <string name="tip_wxpay_failed">Payment Failed</string>
    <string name="tip_wxpay_unsupport">Payment Not Supported</string>
    <string name="tip_start_date">Start Date：</string>
    <string name="tip_purchase_count">Number of days：</string>
    <string name="tip_select_start_date">Select Start Date</string>
    <string name="tip_device_info_menu">Unbind</string>
    <string name="tip_device_list_menu">Edit</string>
    <string name="tip_device_list_menu2">Back</string>
    <string name="tip_unbind_the_device">Would you like to unbind the device?</string>
    <string name="commit_button">Yes</string>
    <string name="cancel_button">Cancel</string>
    <string name="default_button">Default</string>
    <string name="connect_wifi_button">Connect Device Wifi</string>
    <string name="toast_back_exit">Press again to go back.</string>
    <string name="button_purchase">Purchase</string>
    <string name="button_connect">Connect</string>
    <string name="button_commit">OK</string>
    <string name="button_install">Install</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_no_update">Do Not Update</string>
    <string name="button_forget">Clear Input History</string>
    <string name="button_update">Check Update</string>
    <string name="button_disconnect">Disconnect</string>
    <string name="button_close">Close</string>
    <string name="device_ssid">Device SSID：</string>
    <string name="device_wifi_password">WiFi Password：</string>
    <string name="device_translate_language">Translation Languages：</string>
    <string name="device_state_of_charge">Power：</string>
    <string name="device_connect_count">Number of Devices Connected：</string>
    <string name="device_signal_strength">Reception：</string>
    <string name="device_app_version">App Version：</string>
    <string name="device_flow_package_name">Data Package</string>
    <string name="device_daily_flow">Daily Usage Available</string>
    <string name="device_today_used_flow">Data Used Today</string>
    <string name="device_3_hours_used_flow">Data Transfered in Three Hours</string>
    <string name="device_flow_package_starttime">Start Date</string>
    <string name="device_flow_package_endtime">End Date </string>
    <string name="device_flow_left">Available Data</string>
    <string name="device_flow_total_count">Total Data</string>
    <string name="device_flow_countries">Coverage</string>
    <string name="title_flow_mall">Data Package Store</string>
    <string name="title_device_setting">Settings</string>
    <string name="title_modify_hotspot_password">Password</string>
    <string name="title_set_device_lang">Set Device Language</string>
    <string name="title_set_language">Language</string>
    <string name="title_active_flow">Enable  traffic to purchase packet in mall</string>
    <string name="title_active_flowdes">This traffic packet is only used for the purchasing traffic products in the mall through the APP, with a maximum of 30 minutes nd a maximum of 20M traffic per day</string>
    <string name="title_set_apn">Set APN</string>
    <string name="title_set_blacklist">Set Hotspot Blacklist</string>
    <string name="title_save_flow">Data Saver Mode</string>
    <string name="title_set_production">Reset</string>
    <string name="title_product">Products</string>
    <string name="title_instruction">Instruction</string>
    <string name="title_saveflow_open">On</string>
    <string name="title_saveflow_close">Off</string>
    <string name="title_restore_setting">Reset All Settings</string>
    <string name="tile_restore_tip">If you click \'OK\', data saver mode will be turned on and the device will use its default password.</string>
    <string name="tile_restore_pwtip">Would you like to reset device WiFi password to default value?</string>
    <string name="title_connect_wifi">Connect Wifi</string>
    <string name="title_other_wifi">Other WiFi</string>
    <string name="title_set_tip_langugage">Set Device Language</string>
    <string name="title_flow_orders">Data Package History</string>
    <string name="title_detection_device">Detect Device</string>
    <string name="title_basic_setting">Basic Settings</string>
    <string name="title_advanced_setting">Advanced Settings</string>
    <string name="title_device_self_detection">Auto Settings</string>
    <string name="title_software_version">Software Version Check</string>
    <string name="title_device_connect_wifi">Connect WiFi</string>
    <string name="title_select_wifi">Select WiFi</string>
    <string name="title_saved_wifi">WiFi Saved</string>
    <string name="title_chinese">Chinese</string>
    <string name="title_english">English</string>
    <string name="title_japanese">Japanese</string>
    <string name="title_set_lange">Language Setting</string>
    <string name="title_manual_wifi">Manually Enter Ssid to Connect</string>
    <string name="title_tip_nameempty">Name of hotspot cannot be empty.</string>
    <string name="title_tip_passwordempty">Password cannot be empty.</string>
    <string name="title_manual_wifiname">Enter Hotspot Name</string>
    <string name="title_manual_wifipassword">Enter Hotspot Password</string>
    <string name="title_manual_join">Add</string>
    <string name="title_current_connected_wifi">Current Wifi Connected</string>
    <string name="error_set_new_password">At least 8 characters, including numbers and letters.</string>
    <string name="title_clarify">Please follow the steps below to activate/bind your device.</string>
    <string name="title_clarify1">Press the button at the bottom to scan.</string>
    <string name="title_clarify2">Make sure that the device is activated.</string>
    <string name="title_clarify3">Connect the device, enter the main page.</string>
    <string name="title_warn">Reminder:</string>
    <string name="title_warn1">Please make sure that your cellphone is under good Internet reception.</string>
</resources>