<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/dialog_background"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/title_set_language"
            android:textSize="22sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/colorPrimaryDark" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:padding="10dp"
            android:textSize="18sp"
            android:text="@string/tip_close_device_hotspot"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#CCCCCC" />

        <TextView
            android:id="@+id/tv_error_tip"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:background="@color/colorPrimaryDark"
            android:textColor="#FFFFFF"
            android:textSize="12sp"
            android:gravity="center"
            android:visibility="gone"
            android:text="@string/error_set_new_password"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/ok"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="5"
                android:gravity="center"
                android:text="@string/commit_button"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"
                android:background="@null"/>

            <View
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:background="#CCCCCC" />

            <Button
                android:id="@+id/cancel"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="5"
                android:gravity="center"
                android:text="@string/cancel_button"
                android:textColor="#333333"
                android:textSize="16sp"
                android:background="@null"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
