<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/tip_title"
        android:textColor="@color/textColorBlack1"
        android:padding="10dp"
        android:textSize="32sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="10dp"
        android:background="@color/textColorBlack1" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/cannot_find_device"
        android:textColor="@color/textColorBlack1"
        android:textSize="16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#F0F0F0"
        android:layout_marginTop="5dp"
        android:paddingLeft="10dp"
        android:gravity="center_vertical"
        android:text="@string/select_wifi" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_wifi"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>
