<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/baseColorLight"
        >

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="0dp"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:text="@string/tip_welcome"/>

        <TextView
            android:id="@+id/tv_menu"
            android:layout_width="40dp"
            android:layout_height="48dp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="5dp"
            android:visibility="gone"
            android:gravity="center"
            android:text="@string/tip_device_list_menu"
            android:textColor="#FFFFFF"
            android:background="@null"
            android:textSize="12sp"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/iv_top"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_centerHorizontal="true"
                android:src="@mipmap/about"
                />
        </RelativeLayout>

        <ScrollView
            android:id="@+id/sv_introduce"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:background="#F8F8F8"
            android:paddingTop="5dp"
            android:paddingBottom="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_clarify"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="30dp"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_clarify1"
                    android:gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/shape_welcome"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:textColor="@color/white"
                    android:padding="10dp"
                    android:textSize="13dp"
                    />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/arrow"
                    android:layout_gravity="center_horizontal"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_clarify2"
                    android:gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/shape_welcome"
                    android:layout_gravity="center_horizontal"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:paddingRight="20dp"
                    android:paddingLeft="20dp"
                    android:textColor="@color/white"
                    android:textSize="13dp"
                    />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/arrow"
                    android:layout_gravity="center_horizontal"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_clarify3"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/shape_welcome"
                    android:textColor="@color/white"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:textSize="13dp"
                    android:layout_gravity="center_horizontal"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_warn"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_warn1"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="10dp"
                    />
            </LinearLayout>
        </ScrollView>



        <ScrollView
            android:id="@+id/sv_device"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:background="#F8F8F8"
            android:paddingTop="5dp"
            android:paddingBottom="10dp">

            <LinearLayout
                android:id="@+id/ll_device"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            </LinearLayout>
        </ScrollView>


        <Button
            android:id="@+id/connect_Scan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:background="#10B5FF"
            android:textColor="@color/white"
            android:text="@string/tip_for_new_scan_connected2"
            android:layout_gravity="bottom"
            android:textSize="14sp"
            android:visibility="visible"/>

        <TextView
            android:id="@+id/connect_Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/btn_mannual"
            android:textColor="@color/baseColorLight"
            android:textSize="16dp"
            android:layout_weight="1"
            android:textAlignment="center"
            android:visibility="gone"/>

    </LinearLayout>


</LinearLayout>