<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:id="@+id/main_content"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  >

  <RelativeLayout
      android:id="@+id/tool_bar"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@color/baseColorLight">

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_centerVertical="true"
        android:padding="12dp"
        android:src="@mipmap/ic_arrow_back_white"/>

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:text="@string/title_connect_wifi"/>
  </RelativeLayout>

  <View
      android:id="@+id/anchor"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:layout_centerInParent="true"/>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="45dp"
      android:background="@color/white"
      android:gravity="center_vertical"
      android:paddingLeft="25dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="WLAN" />


    <ToggleButton
        android:id="@+id/tb_open_wifi"
        android:layout_width="61dp"
        android:layout_height="25dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/selector_toggle"
        android:checked="false"
        android:text=""
        android:textOff=""
        android:textOn="" />

  </LinearLayout>






  <TextView
      android:id="@+id/other_wifi"
      android:layout_width="match_parent"
      android:layout_height="40dp"
      android:text="@string/title_manual_wifi"
      android:visibility="gone"
      android:paddingLeft="10dp"
      android:gravity="center_vertical"  />

  <View
      android:id="@+id/view_sep1"
      android:layout_width="match_parent"
      android:layout_height="5dp"
      android:background="@color/white" />



  <LinearLayout
      android:id="@+id/ll_saved_wifi"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#F0F0F0"
        android:paddingLeft="10dp"
        android:gravity="center_vertical"
        android:text="@string/title_saved_wifi" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_saved_wifi"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

  </LinearLayout>

  <LinearLayout
      android:id="@+id/ll_connected_wifi"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#F0F0F0"
        android:paddingLeft="10dp"
        android:gravity="center_vertical"
        android:text="@string/title_current_connected_wifi" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_connected_wifi"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

  </LinearLayout>


  <TextView
      android:layout_width="match_parent"
      android:layout_height="40dp"
      android:background="#F0F0F0"
      android:paddingLeft="10dp"
      android:gravity="center_vertical"
      android:text="@string/title_select_wifi" />

  <android.support.v7.widget.RecyclerView
      android:id="@+id/rv_wifi"
      android:layout_width="match_parent"
      android:layout_height="match_parent" />




</LinearLayout>
